<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_prompt"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@color/textHint">
        <requestFocus/>
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:textAllCaps="false"
            android:text="@string/search_button"
            android:textColor="@color/textButton"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/button_edit"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textAllCaps="false"
            android:text="@string/edit_button"
            android:textColor="@color/textButton"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textAllCaps="false"
            android:text="@string/delete"
            android:textColor="@color/textButton"
            android:background="@color/colorPrimaryDark"/>

    </RelativeLayout>



    <TextView
        android:id="@+id/result_display"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/textColorPrimary"/>

</LinearLayout>